# universal-wh-redirector

./: Cargo.toml  readme.md
src/: gethostbyname.rs  lib.rs  mem.rs
