[package]
name = "universal-wh-redirector"
version = "0.1.0"
edition = "2021"

[lib]
name = "dinput8"
crate-type = ["cdylib"]

[dependencies]
sigmatch = "0.1"
log = { version = "0.4.20" }
simplelog = "0.12.2"

windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinSock",
    "Foundation_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation"
] }
