[package]
name = "universal-wh-redirector"
version = "1.1.0"
edition = "2021"

[lib]
name = "dinput8"
crate-type = ["cdylib"]

[dependencies]
sigmatch = "0.1"
log = { version = "0.4.20" }
simplelog = "0.12.2"

windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinSock",
    "Foundation_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation"
] }

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a seperate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%